@@ -11,16 +11,22 @@
   <div class="form-group" ng-class="{'has-warning': errors.notfound }"
        ng-show="{[{ useExternalIdentifiers }]}">
     <label class="col-sm-4 control-label" for="ext_id">
-      Identifiant (n° SSF)<span class="required" ng-show="{[{ useExternalIdentifiers }]}"> *</span>
+      {% if ID_LAGAPEO_ALTERNATIVE_LABEL %}
+        {{ ID_LAGAPEO_ALTERNATIVE_LABEL }}
+      {% else %}
+        Identifiant (n° SSF)
+      {% endif %}<span class="required" ng-show="{[{ useExternalIdentifiers }]}"> *</span>
     </label>
     <div class="col-sm-8">
       <input id="ext_id" ng-model="detailedChild.ext_id"
              type="number" class="form-control"
              max="100000000"
              ng-blur="lookupChild()" ng-required="{[{ useExternalIdentifiers }]}"/>
+      {% if not ID_LAGAPEO_ALTERNATIVE_LABEL %}
       <p class="help-block">
         Voir sur la <a href="{% static 'img/noSSF.jpg' %}" class="image-popover" target="_blank">carte d'écolier</a>
       </p>
+      {% endif %}
       <span class="help-block" ng-show="errors.notfound">L'identifiant est inconnu / invalide.</span>
       <span ng-show="childform.ext_id.$error.required">Ce champ est obligatoire</span>
     </div>
