@@ -198,15 +198,16 @@ def kepchup_context(request):
         "ID_LAGAPEO_EDITABLE": "id_lagapeo" not in settings.KEPCHUP_CHILDREN_UNEDITABLE_FIELDS,
         "LANGUAGE_EDITABLE": "language" not in settings.KEPCHUP_CHILDREN_UNEDITABLE_FIELDS,
         "LAST_NAME_EDITABLE": "last_name" not in settings.KEPCHUP_CHILDREN_UNEDITABLE_FIELDS,
+        "NATIONALITY_EDITABLE": "nationality" not in settings.KEPCHUP_CHILDREN_UNEDITABLE_FIELDS,
+        "OTHER_SCHOOL_EDITABLE": "other_school" not in settings.KEPCHUP_CHILDREN_UNEDITABLE_FIELDS,
+        "SCHOOL_EDITABLE": "school" not in settings.KEPCHUP_CHILDREN_UNEDITABLE_FIELDS,
+        "SCHOOL_YEAR_EDITABLE": "school_year" not in settings.KEPCHUP_CHILDREN_UNEDITABLE_FIELDS,
+        "SEX_EDITABLE": "sex" not in settings.KEPCHUP_CHILDREN_UNEDITABLE_FIELDS,
+        "TEACHER_EDITABLE": "teacher" not in settings.KEPCHUP_CHILDREN_UNEDITABLE_FIELDS,
+        "ID_LAGAPEO_ALTERNATIVE_LABEL": settings.KEPCHUP_ID_LAGAPEO_ALTERNATIVE_LABEL,
         "LIMIT_BY_AGE": settings.KEPCHUP_LIMIT_BY_AGE,
         "LIMIT_BY_SCHOOL_YEAR": settings.KEPCHUP_LIMIT_BY_SCHOOL_YEAR,
         "SCHOOL_YEAR_MANDATORY": settings.KEPCHUP_SCHOOL_YEAR_MANDATORY,
-        "NATIONALITY_EDITABLE": "nationality" not in settings.KEPCHUP_CHILDREN_UNEDITABLE_FIELDS,
-        "OTHER_SCHOOL_EDITABLE": "other_school" not in settings.KEPCHUP_CHILDREN_UNEDITABLE_FIELDS,
-        "SCHOOL_YEAR_EDITABLE": "school_year" not in settings.KEPCHUP_CHILDREN_UNEDITABLE_FIELDS,
-        "SCHOOL_EDITABLE": "school" not in settings.KEPCHUP_CHILDREN_UNEDITABLE_FIELDS,
-        "SEX_EDITABLE": "sex" not in settings.KEPCHUP_CHILDREN_UNEDITABLE_FIELDS,
-        "TEACHER_EDITABLE": "teacher" not in settings.KEPCHUP_CHILDREN_UNEDITABLE_FIELDS,
         "REGISTRATION_EXPIRE_MINUTES": settings.KEPCHUP_REGISTRATION_EXPIRE_MINUTES,
         "USE_ABSENCES": settings.KEPCHUP_USE_ABSENCES,
         "ABSENCES_RELATE_TO_ACTIVITIES": settings.KEPCHUP_ABSENCES_RELATE_TO_ACTIVITIES,
